# transformations-python-basic

./: Pipfile  README.md  pyproject.toml  setup.py
jobs/: hello_spark.py
src/: job_runner.py
src/test/: test_hellospark.py
src/thoughtworks/: hellospark_main.py
tests/: test_hello_spark.py
transformations_basic/: hello_spark.py
