[tool.poetry]
name = "transformations_basic"
version = "0.1.0"
description = "Basic Repo for working with Pyspark"
authors = ["ThoughtWorks <info@thoughtworks.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
